# pomodoro-ss

./: Cargo.toml  build.rs
src/: activity.rs  activity_monitor.rs  app.rs  break_notifier.rs  main.rs  notification.rs  os.rs  schedule.rs  time.rs  tray_icon.rs  utils.rs
