[package]
name = "pomodoro-ss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
notify-rust = "4.8.0"
tray-item = "0.7.1"
winapi = { version = "0.3.9", features = ["winuser"] }

[build-dependencies]
winres = "0.1.12"

[features]
elevate = []
