[package]
name = "pomodoro-ss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
device_query = "1.1.2"
notify-rust = "4.8.0"
once_cell = "1.17.1"
tray-item = "0.7.1"
typemap_rev = "0.3.0"
winapi = { version = "0.3.9", features = ["winuser"] }

[build-dependencies]
winres = "0.1.12"

[features]
elevate = []
