[package]
name = "pomodoro-ss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bevy_ecs = "0.10.0"
bitflags = "2.0.2"
chrono = "0.4.24"
device_query = "1.1.2"
dialog = "0.3.0"
notify-rust = "4.8.0"
once_cell = "1.17.1"
tray-item = "0.7.1"
windows = { version = "0.46.0", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }

[build-dependencies]
winres = "0.1.12"

[features]
elevate = []
